// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`v4 validate options should throw an error on the "fileLoaderOptions" option with 1 value 1`] = `
"Invalid options object. Sharp Loader has been initialized using an options object that does not match the API schema.
 - options.fileLoaderOptions should be an object:
   object { … }"
`;

exports[`v4 validate options should throw an error on the "processFunction" option with true value 1`] = `
"Invalid options object. Sharp Loader has been initialized using an options object that does not match the API schema.
 - options.processFunction should be an instance of function.
   -> A function that returns a sharp object."
`;

exports[`v4 validate options should throw an error on the "processFunction" option with undefined value 1`] = `
"Invalid options object. Sharp Loader has been initialized using an options object that does not match the API schema.
 - options misses the property 'processFunction'. Should be:
   function
   -> A function that returns a sharp object."
`;

exports[`v4 validate options should throw an error on the "processFunction" option with undefined value 2`] = `"processFunction must return a sharp object"`;

exports[`v4 validate options should throw an error on the "toBuffer" option with 1 value 1`] = `
"Invalid options object. Sharp Loader has been initialized using an options object that does not match the API schema.
 - options.toBuffer should be a boolean.
   -> Whether to output as buffer. Default to true."
`;

exports[`v5 validate options should throw an error on the "fileLoaderOptions" option with 1 value 1`] = `
"Invalid options object. Sharp Loader has been initialized using an options object that does not match the API schema.
 - options.fileLoaderOptions should be an object:
   object { … }"
`;

exports[`v5 validate options should throw an error on the "processFunction" option with true value 1`] = `
"Invalid options object. Sharp Loader has been initialized using an options object that does not match the API schema.
 - options.processFunction should be an instance of function.
   -> A function that returns a sharp object."
`;

exports[`v5 validate options should throw an error on the "processFunction" option with undefined value 1`] = `
"Invalid options object. Sharp Loader has been initialized using an options object that does not match the API schema.
 - options misses the property 'processFunction'. Should be:
   function
   -> A function that returns a sharp object."
`;

exports[`v5 validate options should throw an error on the "processFunction" option with undefined value 2`] = `"processFunction must return a sharp object"`;

exports[`v5 validate options should throw an error on the "toBuffer" option with 1 value 1`] = `
"Invalid options object. Sharp Loader has been initialized using an options object that does not match the API schema.
 - options.toBuffer should be a boolean.
   -> Whether to output as buffer. Default to true."
`;
